--- a/first-example/pom.xml
+++ b/first-example/pom.xml
@@ -36,6 +36,23 @@
             <artifactId>camel-spring-boot-starter</artifactId>
             <version>2.23.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-csv</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-context</artifactId>
+            <version>2.23.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-core</artifactId>
+            <version>2.23.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
