--- a/camel-database/pom.xml
+++ b/camel-database/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.khtm.test.camel</groupId>
+        <artifactId>spring-boot-camel</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <groupId>com.khtm.test.camel</groupId>
     <artifactId>camel-database</artifactId>
@@ -38,6 +37,12 @@
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
+            <version>2.24.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-sql</artifactId>
             <version>2.24.0</version>
         </dependency>
 
