--- a/camel-database/src/main/resources/application.properties
+++ b/camel-database/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database=mysql
+camel.springboot.main-run-controller=true
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8585
 
