--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modules>
         <module>first-example</module>
         <module>book-service</module>
-        <module>camel-service</module>
+        <module>camel-database</module>
     </modules>
 
 
