--- a/camel-database/src/main/resources/application.properties
+++ b/camel-database/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8585
-management.endpoints.web.exposure.include="hawtio,jolokia"
+management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
