for using queue by apache camel, ActiveMq adapter added to project.

--- a/camel-database/src/main/resources/application.properties
+++ b/camel-database/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8585
 management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
+
+# ActiveMQ configuration
+spring.activemq.broker-url=http://10.12.47.125:61616
+spring.activemq.pool.max-connections=10
+poolConnectionFactory.maxConnection=10
