--- a/camel-database/src/main/resources/application.properties
+++ b/camel-database/src/main/resources/application.properties
@@ -9,7 +9,6 @@ server.port=8585
 management.endpoints.web.exposure.include=hawtio,jolokia
 hawtio.authenticationEnabled=false
 
-# ActiveMQ configuration
-spring.activemq.broker-url=http://10.12.47.125:61616
+spring.activemq.broker-url=tcp://10.12.47.125:61616
+spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=10
-poolConnectionFactory.maxConnection=10
